--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -17,6 +17,7 @@ body {
     display: inline-block;
     min-width: 144px;
     padding: 17px 16px;
+    border: none;
     border-radius: 24.5px;
     background: var(--primary-color);
     color: #fff;
@@ -212,6 +213,7 @@ a {
 /* end hero */
 /* end header */
 /* =============section-1============== */
+/* heading */
 .section-1 {
     background-color: #fff;
 }
@@ -226,7 +228,7 @@ a {
     display: flex;
     margin-left: auto;
 }
-.section-1 .heading .infor{
+.section-1 .heading .infor {
     width: 45%;
 }
 .section-1 .heading .title {
@@ -236,19 +238,81 @@ a {
     line-height: 48px;
     letter-spacing: -0.02em;
 }
-.section-1 .heading .desc{
+.section-1 .heading .desc {
     font-size: 1.8rem;
     font-weight: 400;
     line-height: 30px;
     margin-top: 20px;
 }
-.circle.previous{
+.circle.previous {
     border: 1px solid var(--second-color);
 }
-.circle.next{
+.circle.next {
     background-color: var(--second-color);
     margin-left: 0;
 }
-.circle.previous:hover{
+.circle.previous:hover {
     background-color: #171100;
+}
+/* end heading */
+/* main */
+.main-section1 {
+    margin-top: 30px;
+    display: flex;
+    gap: 30px;
+}
+.main-section1 .box-img {
+    width: 100%;
+    height: 278px;
+    gap: 0px;
+    opacity: 0px;
+    object-fit: cover;
+    border-radius: 12px 12px 0 0;
+}
+.main-section1 .box__title {
+    display: flex;
+    align-items: center;
+}
+.main-section1 .box__title h3 {
+    font-size: 1.8rem;
+    font-weight: 600;
+    color: var(--primary-color);
+}
+.main-section1 .box__desc {
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 26px;
+    color: #5f5b53;
+}
+.main-section1 .box {
+    width: 33.3%;
+    border: 1px solid #fff;
+    border-radius: 12px;
+    border: 1px solid #e2dfda;
+}
+.main-section1 .box:hover {
+    border-color: transparent;
+    box-shadow: 0px 18px 36px 0px #0000000d;
+}
+.star {
+    display: inline-block;
+    margin-left: auto;
+    color: var(--second-color);
+}
+.main-section1 .box__cta {
+    display: flex;
+    align-items: center;
+}
+.main-section1 .box__cta .btn-box {
+    margin-left: auto;
+}
+.main-section1 .box__cta .btn-box:hover {
+    background-color: var(--second-color);
+}
+.main-section1 .infor-box {
+    padding: 20px;
+}
+.main-section1 .box__cta .price {
+    font-size: 1.8rem;
+    font-weight: 600;
 }
