--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -523,20 +523,84 @@ a {
     left: 0;
     top: 30px;
 }
-.blog .dots{
+.blog .dots {
     margin-top: 38px;
     display: flex;
     gap: 6px;
     justify-content: center;
 }
-.blog .dot{
+.blog .dot {
     display: inline-block;
     width: 6px;
     height: 6px;
-    background-color: #5F5B53;
+    background-color: #5f5b53;
     border-radius: 50%;
 }
-.blog .dot.active{
-    background-color:#FFB900 ;
+.blog .dot.active {
+    background-color: #ffb900;
 }
 /* ===========END Blog =========== */
+/* ===========footer=========== */
+.footer {
+    background-color: #2e2100;
+}
+/* .footer-top {
+    padding-bottom: 26px;
+    border-bottom: 1px solid #59554b;
+} */
+.footer .inner-footer {
+    padding: 96px 0 0 0;
+    display: flex;
+    justify-content: space-evenly;
+}
+.footer .inner-social {
+    margin-top: 18px;
+    display: flex;
+    gap: 18px;
+}
+.footer .social {
+    width: 23%;
+}
+.footer .address{
+    width: 20%;
+}
+.footer__desc {
+    margin-top: 18px;
+}
+.footer .title {
+    font-size: 1.6rem;
+    font-weight: 600;
+    line-height: 28px;
+    color: #fff;
+    padding-bottom: 13px;
+}
+.footer ul.mt-16 {
+    margin-top: 16px;
+}
+.footer ul.mt-16 li {
+    padding: 12px 0;
+}
+.footer ul.mt-16 a, .footer ul.mt-16 p {
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 26px;
+    color: #bfbcb2;
+}
+.coppy-right {
+    text-align: center;
+    margin-top: 16px;
+    border-top: 1px solid #59554b;
+}
+.coppy-right p {
+    padding: 28px 0;
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 26px;
+    color: #807D74;
+}
+.border-bottom{
+    display: inline-block;
+   border-bottom: 1px solid #59554B;
+   padding-right: 48px;
+}
+/* =========== end footer=========== */
